# config-check

./: .gitignore  README.md  README2.md  Readme.md  pyproject.toml  shell.nix  tox.ini
.github/workflows/: ci.yml
Documentation/: Rules.md  architecture.md
docs/: Rules.md  architecture.md  errors-to-detect.md
preciceconfigcheck/: cli.py  rule.py  rule_utils.py  rules_processing.py  violation.py
preciceconfigcheck/rules/: compositional_coupling.py  coupling_scheme_mapping.py  data_use_read_write.py  disjoint_simulations.py  m2n_exchange.py  mapping.py  missing_coupling.py  missing_exchange.py  provide_mesh.py  receive_mesh.py
preciceconfigchecker/: cli.py  collection_of_rules.py  color.py  rule.py  rule_utils.py  rules_processing.py  severity.py  violation.py
preciceconfigchecker/rules/: DataNeverWritten.py  DataNotUsed.py  compositional_coupling.py  coupling_scheme_mapping.py  data_never_written.py  data_not_used.py  data_use_read_write.py  data_used_never_read_never_written.py  disjoint_simulations.py  example_1.py  example_2.py  example_3.py  example_4.py  m2n_exchange.py  mapping.py  missing_coupling.py  missing_exchange.py  provide_mesh.py  receive_mesh.py
preciceconfigchecker/test-xml-files/: precice-config-data_never_read_or_written.xml  precice-config-data_read_but_not_written.xml
tests/: test_utils.py
tests/compositional-coupling/: compositional-coupling_test.py  precice-config.xml
tests/coupling-scheme-mapping/: coupling-scheme-mapping_test.py  precice-config.xml
tests/disjoint-simulations/: disjoint-simulations_test.py
tests/disjoint-simulations_fully/: disjoint-simulations_fully_test.py  precice-config.xml
tests/disjoint-simulations_shared-data/: disjoint-simulations_shared-data_test.py  precice-config.xml
tests/fully-disjoint-simulations/: fully-disjoint-simulations_test.py
tests/m2n-exchange/: m2n-exchange_test.py  precice-config.xml
tests/mapping/: mapping_test.py  precice-config.xml
tests/missing-coupling-scheme/: missing-coupling-scheme_test.py  precice-config.xml
tests/missing-exchange/: precice-config.xml
tests/missing_coupling_scheme/: precice-config-missing_coupling_scheme.xml
tests/provide-mesh/: precice-config.xml  provide-mesh_test.py
tests/receive-mesh/: precice-config.xml  receive-mesh_test.py
tests/shared-data-disjoint-simulations/: shared-data-disjoint-simulations_test.py
tests/simple-good/: precice-config.xml  simple-good_test.py
(+35 files in other folders)
