[build-system]
requires = ["setuptools>=41", "wheel", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[project]
name = "precice-config-check"
dynamic = [ "version" ]
readme = "README.md"
license ="MIT"
license-files = ["LICENSE"]

requires-python = ">= 3.10"
dependencies = [
    "precice_config_graph @ git+https://github.com/precice/config-graph.git",
    "pytest"
]

[project.urls]
Repository = "https://github.com/precice-forschungsprojekt/config-check.git"
Issues = "https://github.com/precice-forschungsprojekt/config-check/issues"

[project.scripts]
precice-config-check = "preciceconfigcheck.cli:main"

[tool.setuptools]
packages = ["preciceconfigcheck", "preciceconfigcheck.rules"]

[tool.setuptools-git-versioning]
enabled = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test.py", "*_test.py"]
pythonpath = ["."]
